site: fix button align of home page

--- a/site/theme/static/responsive.less
+++ b/site/theme/static/responsive.less
@@ -254,7 +254,7 @@
       .banner-btns {
         display: block;
         text-align: center;
-        max-width: 100%;
+        min-width: 100%;
         white-space: nowrap;
       }
     }
